# Email-Scraper

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  categories.txt  email_harvester_ultimate.py  pyproject.toml  verified_ranked.csv
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/email_harvester/: __init__.py  __main__.py  cli.py  config.py  errors.py  extraction.py  fetchers.py  hunter.py  io_csv.py  logging_utils.py  models.py  pipeline.py  scoring.py  search_backends.py  validation.py
tests/: test_cli.py  test_extraction.py  test_fetchers.py  test_hunter.py  test_io_csv.py  test_live_integration.py  test_pipeline.py  test_scoring.py  test_search_backends.py  test_validation.py
